objects/fcio1__Error_Log__c.object
<CustomObject>
    <fields>
        <fullName>fcio1__Class_Name__c</fullName>
        <description>Class Name in which error occured</description>
        <label>Class Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>fcio1__Comma_Sep_Params__c</fullName>
        <label>Comma Sep Params</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>fcio1__Error_Message__c</fullName>
        <description>The error message of the error occurred.</description>
        <label>Error Message</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>fcio1__Error_Type__c</fullName>
        <description>The Type of error occured.</description>
        <label>Error Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>fcio1__Line_Number__c</fullName>
        <description>Line number where the error occured</description>
        <label>Line Number</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>fcio1__Method_Name__c</fullName>
        <description>Method Name in which error occurred.</description>
        <label>Method Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>fcio1__Stack_Trace__c</fullName>
        <label>Stack Trace</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Fullcast Policy Error Log</label>
    <nameField>
        <displayFormat>EL-{0000}</displayFormat>
        <label>Error Log Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Fullcast Policy Error Logs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>